--- a/app/views/current.scala.html
+++ b/app/views/current.scala.html
@@ -1,6 +1,6 @@
 @(current: Admin)
 @templates.main("My Account") {
-@menu.admin("My Account")
+@menu.admin("My Account", current)
 @menu.logout(current)
 } {
 <div class="container">
