--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,15 +1,15 @@
-@(admin: Admin)
-@templates.public("Audience Extender", homelink = if(admin!=null)(routes.MainController.dashboard)else(routes.MainController.base)) {
+@(current: Admin, form: play.api.data.Form[(String,String,String)])
+@templates.public("Audience Extender", homelink = if(current!=null)(routes.MainController.dashboard)else(routes.MainController.base)) {
 <ul class="nav navbar-nav">
 	<li><a class="scroll" href="#howitworks">How it works</a></li>
 	<li><a class="scroll" href="#benefits">Benefits</a></li>
 	<li><a class="scroll" href="#pricing">Pricing</a></li>
 	<li><a class="scroll" href="#gettingstarted">Getting Started</a></li>
 </ul>
-@if(admin==null) {
+@if(current==null) {
 	@menu.login()
 } else {
-	@menu.public(admin)
+	@menu.public(current)
 }
 }{
 <div class="scroll-buttons">
@@ -127,7 +127,7 @@
 			<h2 class="text-center">Let's monetize together</h2>
 			<p class="text-center">Reach out today, and find out what you could be earning tomorrow.</p>
 			<p class="text-center">Call us at <strong>+1 (917) 934-3019</strong> or fill in the below form and we'll get back to you.</p>
-@helper.form(routes.MainController.sendMessage, 'class -> "form-horizontal form-contact", 'role -> "form", 'novalidate -> "") {
+@helper.form(routes.MainController.sendContactMessage, 'class -> "form-horizontal form-contact", 'role -> "form", 'novalidate -> "") {
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-8">
 						<input class="form-control" required type="text" placeholder="Name" id="name" name="name" value="">
