--- a/app/views/menu/admin.scala.html
+++ b/app/views/menu/admin.scala.html
@@ -1,8 +1,10 @@
-@(active: String)
+@(active: String, current: Admin)
 <ul class="nav navbar-nav">
 	<li class="@if(active=="Dashboard"){active}"><a href="@routes.MainController.dashboard">Dashboard</a></li>
+@if(current.is("sysadmin")) {
 	<li class="@if(active=="Creatives"){active}"><a href="@routes.AdminController.creatives">Creatives</a></li>
 	<li class="@if(active=="Cookies"){active}"><a href="@routes.AdminController.cookies">Cookies</a></li>
 	<li class="@if(active=="Publishers"){active}"><a href="@routes.PublisherController.publishers">Publishers</a></li>
 	<li class="@if(active=="Admins"){active }hidden-sm"><a href="@routes.AdminController.admins">Admins</a></li>
+}
 </ul>
