--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -147,22 +147,22 @@
 							<span class="btn btn-success fileinput-button">
 								<span class="glyphicon glyphicon-plus"></span>
 								<span>...or choose files</span>
-								<input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: {}">
+								<input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: { route: creativeRoute() }">
 							</span>
 						</div>
 						<h3>Your Uploads</h3>
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-md-12" data-bind="with: currentcampaign()">
 								<table class="table table-striped table-bordered table-vertical">
-									<tbody data-bind="foreach: currentcampaign().creatives">
+									<tbody data-bind="foreach: creatives">
 										<tr>
-											<td class="col-sm-2 col-xs-4"><img src="@routes.RemoteAssets.at("images/tmp-banner-your-uploads.png")" alt="" data-bind="attr: { 'src': url }"/></td>
+											<td class="col-sm-2 col-xs-4"><img src="@routes.RemoteAssets.at("images/tmp-banner-your-uploads.png")" alt="" data-bind="attr: { 'src': previewUrl }"/></td>
 											<td class="col-sm-10 col-xs-8">
 												<div class="row">
 													<div class="col-xs-12 col-sm-9" data-bind="text: name">
 													</div>
 													<div class="col-xs-12 col-sm-3 text-right">
-														<button class="btn btn-danger btn-xs" type="button"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+														<button class="btn btn-danger btn-xs" type="button" data-bind="click: $root.removecreative"><span class="glyphicon glyphicon-remove"></span> Delete</button>
 													</div>
 												</div>
 											</td>
@@ -179,7 +179,7 @@
 					</div>
 				</div>
 				<div class="actions text-right m-top">
-					<button class="btn btn-prev" type="button"><span class="glyphicon glyphicon-arrow-left"></span> Prev</button>
+					<button class="btn btn-prev" type="button" data-bind="css: {'disabled': campaignstep.isFirst }"><span class="glyphicon glyphicon-arrow-left"></span> Prev</button>
 					<button class="btn btn-next" type="button" data-last="Finish" data-bind="css: {'disabled': campaignstep.isLast }">Next <span class="glyphicon glyphicon-arrow-right"></span></button>
 				</div>
 			</div>
