--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -147,7 +147,7 @@
 							<span class="btn btn-success fileinput-button">
 								<span class="glyphicon glyphicon-plus"></span>
 								<span>...or choose files</span>
-								<input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: { route: creativeRoute() }">
+								<input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: { route: creativeRoute(), dropZone: '.box-drag-and-drop-banner' }">
 							</span>
 						</div>
 						<h3>Your Uploads</h3>
