--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(current: Admin, form: play.api.data.Form[(String,String,String)])
+@(current: Admin, form: play.api.data.Form[(String,String,String)])(implicit flash: play.api.mvc.Flash)
 @templates.public("Audience Extender", homelink = if(current!=null)(routes.MainController.dashboard)else(routes.MainController.base)) {
 <ul class="nav navbar-nav">
 	<li><a class="scroll" href="#howitworks">How it works</a></li>
@@ -128,17 +128,23 @@
 			<p class="text-center">Reach out today, and find out what you could be earning tomorrow.</p>
 			<p class="text-center">Call us at <strong>+1 (917) 934-3019</strong> or fill in the below form and we'll get back to you.</p>
 @helper.form(routes.MainController.sendContactMessage, 'class -> "form-horizontal form-contact", 'role -> "form", 'novalidate -> "") {
-				<div class="form-group">
+				@form.globalError.map { error =>
+				<div class="alert alert-danger">@error.message</div>
+				}
+				@flash.get("success").map { message =>
+				<div class="alert alert-success">@message</div>
+				}
+				<div class="form-group @{if(form.error("name")){"has-warning"}}">
 					<div class="col-sm-offset-2 col-sm-8">
 						<input class="form-control" required type="text" placeholder="Name" id="name" name="name" value="">
 					</div>
 				</div>
-				<div class="form-group">
+				<div class="form-group @{if(form.error("email")){"has-warning"}}">
 					<div class="col-sm-offset-2 col-sm-8">
 						<input class="form-control" required type="email" placeholder="Email" id="email" name="email" value="">
 					</div>
 				</div>
-				<div class="form-group">
+				<div class="form-group @{if(form.error("msg")){"has-warning"}}">
 					<div class="col-sm-offset-2 col-sm-8">
 						<textarea class="form-control" required placeholder="Message" id="msg" name="msg"></textarea>
 					</div>
