--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="dashboard" data-bind="nvddd: campaignchart.chartcontent, nvdddOptions: {chartType: 'cumulativeline',yFormat: 'currency'}">
+					<div class="dashboard" data-bind="nvddd: campaignchart.chartcontent, nvdddOptions: {chartType: 'cumulativeline', yFormat: 'currency', colors: ['#275980','#bf0c0c','#f3b300']}">
 						<svg></svg>
 					</div>
 				</div>
@@ -134,10 +134,10 @@
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newcampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: showyieldmaximizer"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
+					<button type="button" disabled="true" class="btn btn-lg btn-block btn-plus" data-bind="click: showyieldmaximizer"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser <span class="label label-info">soon</span></button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: showadpackages"><span></span><span class="glyphicon glyphicon-plus-sign"></span> AD Packages</button>
+					<button type="button" disabled="true" class="btn btn-lg btn-block btn-plus" data-bind="click: showadpackages"><span></span><span class="glyphicon glyphicon-plus-sign"></span> AD Packages <span class="label label-info">soon</span></button>
 				</p>
 			</div>
 		</div>
