--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="dashboard" data-bind="nvddd: audiencechart.chartcontent, nvdddOptions: {chartType: 'multibar', yFormat: 'integer', cumulateOther: 7}">
+					<div class="dashboard" data-bind="nvddd: audiencechart.chartcontent, nvdddOptions: {chartType: audiencecharttype, yFormat: 'integer', cumulateOther: 7}">
 						<svg></svg>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="table-responsive">
-							<table class="table table-striped table-bordered data-table" data-bind="datatable: audiencetable, datatableScroller: audiencetablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'html' }, { sType: 'number' }, { sType: 'number' } ] }">
+							<table class="table table-striped table-bordered data-table" data-bind="datatable: audiencetable, datatableScroller: audiencetablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'html' }, { sType: 'number' }, { sType: 'number' } ], rowClick: selectaudience }">
 								<thead>
 									<tr>
 										<th class="sorting">Name</th>
