--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-sm-4 hidden-xs">
 					<form class="form-horizontal" role="form">
 						<div class="form-group well-fix">
 							<label for="selectDate" class="col-sm-2 control-label">Dates</label>
@@ -51,7 +51,7 @@
 						</div>
 					</form>
 				</div>
-				<div class="col-sm-8">
+				<div class="col-sm-6">
 					<div data-bind="datepicker: campaignchartdaterange, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }" class="well well-sm m-null input-daterange">
 						<div class="row">
 							<div class="col-sm-6">
@@ -75,6 +75,16 @@
 								</form>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="col-sm-2 hidden-xs">
+					<div class="btn-group" data-toggle="buttons">
+						<label class="btn btn-default active">
+							<input type="radio" name="charttype" value="cumulativeline" data-bind="checkedChange: campaigncharttype">Sum
+						</label>
+						<label class="btn btn-default">
+							<input type="radio" name="charttype" value="line" data-bind="checkedChange: campaigncharttype">Line
+						</label>
 					</div>
 				</div>
 			</div>
