--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -62,10 +62,10 @@
 				</div>
 				<div class="col-sm-2 hidden-xs">
 					<div class="btn-group" data-toggle="buttons">
-						<label class="btn btn-default active">
+						<label class="btn btn-default active btn-sm">
 							<input type="radio" name="charttype" value="multibar" data-bind="checkedChange: audiencecharttype">Bar
 						</label>
-						<label class="btn btn-default">
+						<label class="btn btn-default btn-sm">
 							<input type="radio" name="charttype" value="line" data-bind="checkedChange: audiencecharttype">Line
 						</label>
 					</div>
