--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -79,10 +79,10 @@
 				</div>
 				<div class="col-sm-2 hidden-xs">
 					<div class="btn-group" data-toggle="buttons">
-						<label class="btn btn-default active">
+						<label class="btn btn-default active btn-sm">
 							<input type="radio" name="charttype" value="cumulativeline" data-bind="checkedChange: campaigncharttype">Sum
 						</label>
-						<label class="btn btn-default">
+						<label class="btn btn-default btn-sm">
 							<input type="radio" name="charttype" value="line" data-bind="checkedChange: campaigncharttype">Line
 						</label>
 					</div>
