--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -95,7 +95,7 @@
 				<div class="row">
 					@elements.searchbar("audiencetablesearchbar")
 				</div>
-				<div class="row">
+				<div class="row hidden-lg">
 					@elements.pagination("audiencetablescroller")
 				</div>
 				<div class="row">
