--- a/app/views/publishers.scala.html
+++ b/app/views/publishers.scala.html
@@ -14,7 +14,7 @@
 <div class="container m-top">
 	<div class="row">
 		<div class="col-md-9">
-			<div class="row">
+			<div class="row hidden-lg">
 				@elements.pagination("datatablescroller")
 			</div>
 			<div class="row">
