--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -781,11 +781,17 @@ nav.loginbar {
 }
 
 #loader {
-	position:absolute;
-	top:9px;
-	left:5px;
-	width:31px;
-	height:31px;
+  position: absolute;
+  top: 9px;
+  left: 155px;
+  width: 31px;
+  height: 31px;
+}
+
+@media (min-width: 800px) {
+  #loader {
+    left: 5px;
+  }
 }
 
 .control-group.warning .help-block,
