--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -128,17 +128,17 @@
 			<p class="text-center">Reach out today, and find out what you could be earning tomorrow.</p>
 			<p class="text-center">Call us at <strong>+1 (917) 934-3019</strong> or fill in the below form and we'll get back to you.</p>
 @helper.form(routes.MainController.sendMessage, 'class -> "form-horizontal form-contact", 'role -> "form", 'novalidate -> "") {
-				<div class="form-group @{if(form.error("name")){"has-warning"}}">
+				<div class="form-group @{if(form.error("name")){"has-warning"}} control-group">
 					<div class="col-sm-offset-2 col-sm-8">
 						<input class="form-control" required type="text" placeholder="Name" id="name" name="name" value="@form("name").value"">
 					</div>
 				</div>
-				<div class="form-group @{if(form.error("email")){"has-warning"}}">
+				<div class="form-group @{if(form.error("email")){"has-warning"}} control-group">
 					<div class="col-sm-offset-2 col-sm-8">
 						<input class="form-control" required type="email" placeholder="Email" id="email" name="email" value="@form("email").value"">
 					</div>
 				</div>
-				<div class="form-group @{if(form.error("msg")){"has-warning"}}">
+				<div class="form-group @{if(form.error("msg")){"has-warning"}} control-group">
 					<div class="col-sm-offset-2 col-sm-8">
 						<textarea class="form-control" required placeholder="Message" id="msg" name="msg">@form("msg").value</textarea>
 					</div>
