--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -112,7 +112,7 @@
 				<div class="row">
 					@elements.searchbar("campaigntablesearchbar")
 				</div>
-				<div class="row hidden-lg">
+				<div class="row hidden-lg hidden-md">
 					@elements.pagination("campaigntablescroller")
 				</div>
 				<div class="row">
