--- a/app/views/creatives.scala.html
+++ b/app/views/creatives.scala.html
@@ -15,7 +15,7 @@
 <div class="container m-top">
 	<div class="row">
 		<div class="col-md-9">
-			<div class="row hidden-lg">
+			<div class="row hidden-lg hidden-md">
 				@elements.pagination("datatablescroller")
 			</div>
 			<div class="row">
