--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -57,7 +57,7 @@
 							<div class="col-sm-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group m-null">
-										<label for="selectDateFrom" class="col-sm-2 control-label">From</label>
+										<label for="selectDateFrom" class="col-sm-2 control-label hidden-md hidden-sm">From</label>
 										<div class="col-sm-10">
 											<input class="form-control date-picker" id="selectDateFrom" name="start"/>
 										</div>
@@ -67,7 +67,7 @@
 							<div class="col-sm-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group m-null">
-										<label for="selectDateTo" class="col-sm-2 control-label">To</label>
+										<label for="selectDateTo" class="col-sm-2 control-label hidden-md hidden-sm">To</label>
 										<div class="col-sm-10">
 											<input class="form-control date-picker" id="selectDateTo" name="end"/>
 										</div>
