--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,9 +1,9 @@
 //frontend
-@import url("http://fonts.googleapis.com/css?family=Oswald");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans");
+@import url("//fonts.googleapis.com/css?family=Oswald");
+@import url("//fonts.googleapis.com/css?family=Open+Sans");
 
 //backend
-@import url("http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,400italic,300italic,600italic");
+@import url("//fonts.googleapis.com/css?family=Titillium+Web:400,600,300,400italic,300italic,600italic");
 
 
 
