--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -12,7 +12,7 @@
 	//]]>
 </script>
 } {
-<div class="container m-top">
+<div class="container m-top" data-bind="noty: messages, notyOptions: {}">
 	<div class="row">
 		<div class="col-md-9">
 			<div class="row hidden-lg hidden-md">
