--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-3" data-bind="foreach: messages">
+		<div class="col-md-3" data-bind="foreach: news">
 			<div class="panel panel-default" style="display:none;" data-bind="visible: !dismissed()">
 				<div class="panel-heading" data-bind="text: title, click: dismiss"></div>
 				<div class="panel-body" data-bind="text: content"></div>
