--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -143,11 +143,16 @@
 							<div><img src="@routes.RemoteAssets.at("images/banner-examples.png")" alt="" /></div>
 							<p>You can drag multiple images here. We don't accept folders or compressed (zip) items.</p>
 						</div>
+						<div class="progress" data-bind="fadeVisible: currentcampaign().uploadprogress.isInner">
+							<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-bind="style: {'width': currentcampaign().uploadprogress.currentValue.extend({'percent':0})}">
+								<span class="sr-only"><span data-bind="text: currentcampaign().uploadprogress.currentValue"></span>% Complete</span>
+							</div>
+						</div>
 						<div class="actions text-center m-top">
 							<span class="btn btn-success fileinput-button">
 								<span class="glyphicon glyphicon-plus"></span>
 								<span>...or choose files</span>
-								<input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: { route: creativeRoute(), dropZone: '.box-drag-and-drop-banner' }">
+								<input type="file" multiple="" data-bind="fileupload: addcreative, fileuploadOptions: { route: creativeRoute(), dropZone: '.box-drag-and-drop-banner', fileuploadfail: currentcampaign().failedupload, progress: currentcampaign().uploadprogress.currentValue }">
 							</span>
 						</div>
 						<h3>Your Uploads</h3>
