add campaign scheduler

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -780,6 +780,11 @@ nav.loginbar {
 	margin-top:15px;
 }
 
+.schedule svg {
+	height:500px;
+	background:#fff;
+}
+
 #loader {
   position: absolute;
   top: 9px;
