--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -73,7 +73,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="dashboard" data-bind="nvddd: audiencechart.chartcontent, nvdddOptions: {chartType: audiencecharttype, yFormat: 'integer', cumulateOther: 7}">
+					<div class="dashboard with-transitions" data-bind="nvddd: audiencechart.chartcontent, nvdddOptions: {chartType: audiencecharttype, yFormat: 'integer', cumulateOther: 7}">
 						<svg></svg>
 					</div>
 				</div>
