--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -90,7 +90,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="dashboard" data-bind="nvddd: campaignchart.chartcontent, nvdddOptions: {chartType: campaigncharttype, yFormat: 'currency', colors: ['#275980','#bf0c0c','#f3b300']}">
+					<div class="dashboard with-transitions" data-bind="nvddd: campaignchart.chartcontent, nvdddOptions: {chartType: campaigncharttype, yFormat: 'currency', colors: ['#275980','#bf0c0c','#f3b300']}">
 						<svg></svg>
 					</div>
 				</div>
