--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -8,7 +8,7 @@
 	window.data = {};
 	window.data.admins = @{import play.api.libs.json._;import controllers.AdminController.AdminFormat;Html(Json.toJson(admins).toString());};
 	window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());};
-	window.data.admin = {email:'@current.email',roles:@{import play.api.libs.json._;Html(Json.toJson(current.getRoles().asScala).toString());}};
+	window.data.admin = {email:'@current.getEmail()',roles:@{import play.api.libs.json._;Html(Json.toJson(current.getRoles().asScala).toString());}};
 	//]]>
 </script>
 } {
