use getter/setter

--- a/app/views/audiences.scala.html
+++ b/app/views/audiences.scala.html
@@ -8,7 +8,7 @@
 		@audiences.map {
 			case audience => {
 				<div class="audience">
-					<h2>@audience.name</h2>
+					<h2>@audience.getName()</h2>
 				</div>
 			}
 		}
