--- a/app/views/campaigns.scala.html
+++ b/app/views/campaigns.scala.html
@@ -8,7 +8,7 @@
 		@campaigns.map {
 			case campaign => {
 				<div class="campaign">
-					<h2>@campaign.name</h2>
+					<h2>@campaign.getName()</h2>
 				</div>
 			}
 		}
