--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
-		<div id="loader" style="background:url(@routes.RemoteAssets.at("images/loader.gif"))" data-bind="visible: loader.isNotFirst"></div>
+		<div id="loader" style="background:url(@routes.RemoteAssets.at("images/loader.gif"))" data-bind="fadeVisible: loader.isNotFirst.extend({throttle:200})"></div>
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				<span class="icon-bar"></span>
