--- a/app/views/parts/cookieedit.scala.html
+++ b/app/views/parts/cookieedit.scala.html
@@ -12,7 +12,17 @@
 						<div class="form-group control-group">
 							<label for="cookiename" class="col-sm-3 control-label">Cookie Name</label>
 							<div class="col-sm-9">
-								<input type="text" required data-validation-required-message="Enter a cookie name" class="form-control" id="cookiename" placeholder="Admin Name" data-bind="value: name">
+								<input type="text" required data-validation-required-message="Enter a cookie name" class="form-control" id="cookiename" placeholder="Cookie Name" data-bind="value: name">
+							</div>
+							<div class="controls popover left">
+								<div class="arrow"></div>
+								<div class="popover-title"><span class="glyphicon glyphicon-exclamation-sign"></span><span> </span><span class="help-block"></span></div>
+							</div>
+						</div>
+						<div class="form-group control-group">
+							<label for="cookiecode" class="col-sm-3 control-label">Code</label>
+							<div class="col-sm-9">
+								<textarea class="form-control" id="cookiename" placeholder="Enter cookie code" data-bind="value: content"></textarea>
 							</div>
 							<div class="controls popover left">
 								<div class="arrow"></div>
