--- a/app/views/parts/creativeedit.scala.html
+++ b/app/views/parts/creativeedit.scala.html
@@ -19,6 +19,12 @@
 								<div class="popover-title"><span class="glyphicon glyphicon-exclamation-sign"></span><span> </span><span class="help-block"></span></div>
 							</div>
 						</div>
+						<div class="form-group control-group">
+							<label for="creativeurl" class="col-sm-3 control-label">Url</label>
+							<div class="col-sm-9">
+								<textarea class="form-control" id="cookiename" data-bind="text: url"></textarea>
+							</div>
+						</div>
 						<div class="form-group">
 							<div class="col-sm-offset-3 col-sm-9">
 								<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-floppy-disk"></span> Save Creative</button>
