add creative url save

--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -11,6 +11,19 @@
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/jquery.fileupload-ui.css")" >
 	<link rel="stylesheet" media="screen" href="@routes.RemoteAssets.at("stylesheets/main.css")">
 	<link rel="shortcut icon" href="@routes.RemoteAssets.at("images/favicon.ico")">
+
+<script type="text/javascript">
+//<![CDATA[
+(function(){
+var path='/code/c6b4329c-ddd6-419c-9a93-ab815adf8782/sub';
+var prot=document.location.protocol;
+var dom='localhost:9000';
+var loc=encodeURIComponent(document.location);
+document.write('<script src="'+prot+'//'+dom+path+'?l='+loc+'" async><'+'/script>');
+})()
+//]]>
+</script>
+
 </head>
 <body>
 
