--- a/app/views/parts/cookieedit.scala.html
+++ b/app/views/parts/cookieedit.scala.html
@@ -3,7 +3,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title">New/Edit Cookie: <a href="#" id="cookiename" data-bind="editable: currentcookie().name" data-type="text" data-pk="1" data-title="Enter Cookie Name">New Cookie</a></h4>
+				<h4 class="modal-title">Edit Cookie: <a href="#" id="cookiename" data-bind="editable: currentcookie().name" data-type="text" data-pk="1" data-title="Enter Cookie Name">New Cookie</a></h4>
 			</div>
 			<div class="modal-body">
 				<div class="box-1" data-bind="with: currentcookie">
