use Show als label

--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -42,7 +42,7 @@
 													<span></span>
 												</span>
 												<span class="website-audience"><span data-bind="text: count">0</span> Users <span class="glyphicon glyphicon-eye-open"></span></span>
-												<span class="website-actions" data-bind="visible: !$root.currentwebsite().editing()"><button type="button" class="btn btn-primary btn-xs" data-bind="click: $root.selectwebsite, text: selected() ? 'Deselect' : 'Select' ">Select</button> <button type="button" class="btn btn-primary btn-xs" data-bind="click: $root.editwebsite">Edit</button> <button type="button" class="btn btn-danger btn-xs" data-bind="visible: $root.currentaudience().persisted, click: $root.deletewebsite">Delete</button></span>
+												<span class="website-actions" data-bind="visible: !$root.currentwebsite().editing()"><button type="button" class="btn btn-primary btn-xs" data-bind="click: $root.selectwebsite, text: selected() ? 'Deselect' : 'Select' ">Select</button> <button type="button" class="btn btn-primary btn-xs" data-bind="click: $root.editwebsite">Show</button> <button type="button" class="btn btn-danger btn-xs" data-bind="visible: $root.currentaudience().persisted, click: $root.deletewebsite">Delete</button></span>
 											</a>
 										</li>
 									</ul>
